create testing environment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ env:
   MONGODB_DB_NAME: ghEnvVar-demo
 jobs:
   test:
+    environment: testing
     env:
       MONGODB_CLUSTER_ADDRESS: madancluster.0aifm.mongodb.net
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME}}
@@ -38,5 +39,5 @@ jobs:
       - name: Output information
         run: |        
           echo "MONGODB_DB_NAME: ${{ env.MONGODB_DB_NAME }}"
-          echo "MONGODB_PASSWORD: ${{ env.MONGODB_PASSWORD }}" # This will not work
+          echo "MONGODB_PASSWORD: ${{ env.MONGODB_PASSWORD }}" # This will not work as the env variable is not available in this job
           
