--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ env:
   MONGODB_DB_NAME: ghEnvVar-demo
 jobs:
   test:
+    environment: testing
     env:
       MONGODB_CLUSTER_ADDRESS: madancluster.0aifm.mongodb.net
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME}}
